commit pour le fonctionnement des endpoints
